# IntentForge

./: .env.example  .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmark/: README.md  run_benchmark.py
benchmark/expected/: expected_features.json
benchmark/prompts/: clean_prompts.json  edit_prompts.json  hole_pattern_prompts.json  l_bracket_edit_prompts.json  l_bracket_optional_feature_prompts.json  l_bracket_rejection_prompts.json  rejection_prompts.json
demo/: README.md  run_demo.py
docs/: acceptance_decisions.md  api_contract.md  architecture.md  assurance_cases.md  audit_chain.md  audit_packages.md  audit_portability.md  benchmark.md  capability_matrix.md  comparison_codex.md  content_addressed_audit.md  decision_provenance.md  design_intent.md  design_knowledge.md  design_review.md  design_traceability.md  development.md  engineering_reasoning.md  evidence_bundles.md  evidence_traceability.md  feature_recognition.md  harness.md  industrial_flange.md  knowledge_coverage.md  knowledge_rule_packs.md  llm_translator.md  mcp.md  multi_variant_audit.md  offline_verification.md  policy_checks.md  product_demo.md  review_policies.md  roadmap.md  spur_gear.md  standard_bolt.md  topology_registry.md  trust_report.md  validation.md  workflow_examples.md
docs/releases/: v0.10.0.md  v0.10.1.md  v0.10.2.md
examples/: api_client_demo.py  bracket_feature_plan.json  l_bracket_constraints.json  l_bracket_feature_plan.json  l_bracket_intent.json  l_bracket_prompt.txt  product_workflow_demo.py
harness/: __init__.py  orchestrator.py
harness/adversarial/: __init__.py  adversarial_prompts.json
harness/edits/: __init__.py  edit_chains.json  edit_preservation_harness.py
harness/reports/: __init__.py  report_schema.py
harness/sweeps/: __init__.py  parameter_sweep.py
intentforge/: __init__.py  cli.py  config.py  demo_runner.py  output_manager.py  workflows.py
mcp_server/: server.py  tools.py
tests/: phase26_test_helpers.py  phase27_test_helpers.py  reasoning_test_helpers.py  review_test_helpers.py  test_adversarial_harness.py  test_api.py  test_assurance_builder.py  test_assurance_claims.py  test_assurance_cli.py  test_assurance_comparison.py  test_assurance_harness.py  test_assurance_lineage.py  test_assurance_packaging.py  test_assurance_renderer.py  test_assurance_schema.py  test_assurance_validation.py  test_audit_package.py  test_audit_portability.py  test_benchmark.py  test_bracket_generation.py  test_bracket_rules.py  test_capability_cli.py  test_capability_harness.py  test_capability_manifest.py  test_capability_matrix.py  test_capability_packaging.py  test_capability_schema.py  test_cas_audit_package.py  test_cas_cli.py  test_cas_packaging.py  test_cas_schema.py  test_client.py  test_config.py  test_contracts.py  test_demo_scripts.py  test_design_rationale.py  test_design_review.py  test_dossier_builder.py  test_dossier_cli.py  test_dossier_merkle.py  (+100 more)
(+230 files in other folders)
