[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentforge"
version = "0.9.0"
description = "Intent-preserving deterministic CAD pipeline for editable, validated CadQuery models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.4",
]
mcp = [
    "mcp",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
client = [
    "rich>=13.0",
    "prompt_toolkit>=3.0.38",
]
dev = [
    "pytest>=8.2",
]

[project.scripts]
intentforge = "intentforge.cli:main"

[tool.setuptools.packages.find]
include = ["intentforge*", "mcp_server*", "benchmark*", "harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
