[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentforge"
version = "0.10.2"
description = "Intent-preserving deterministic CAD pipeline for editable, validated CadQuery models."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.4",
]
mcp = [
    "mcp",
]
api = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.29",
]
client = [
    "rich>=13.0",
    "prompt_toolkit>=3.0.38",
]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
]

[project.scripts]
intentforge = "intentforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["intentforge*", "mcp_server*", "benchmark*", "harness*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"benchmark" = ["prompts/*.json", "expected/*.json"]
"harness.adversarial" = ["*.json"]
"harness.edits" = ["*.json"]
"harness.sweeps" = ["*.yaml"]
"intentforge.example_data" = ["*.json", "*.yaml", "*.txt"]
"intentforge.knowledge.data" = ["*.yaml"]
"intentforge.knowledge.packs.data" = ["*.yaml"]
"intentforge.knowledge.reasoning.data" = ["*.yaml"]
"intentforge.review.data" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
